# agent-office

./: .gitignore  AGENTS.md  LICENSE  README.md  REBUILD-PLAN.md  index.html  mascot.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: README.md  bot-mode-design.md  claude-session-resume-design.md  claude-usage-live-fetch-design.md  cli-control-design.md  mascot-window-design.md  pi-support-design.md  session-analytics-design.md  session-broker-v2-design.md  session-event-timeseries-design.md  session-handoff-design.md  subsystem-a-sessions.md  subsystem-b-office.md  subsystem-c-ui.md  usage-design.md  usage-limits-design.md
docs/archive/: claude-usage-live-fetch-design.md  session-event-timeseries-design.md  usage-limits-design.md
docs/superpowers/plans/: 2026-07-11-session-event-timeseries.md  2026-07-11-subagent-mini-characters.md
docs/superpowers/specs/: 2026-07-11-session-event-timeseries-design.md  2026-07-11-subagent-mini-characters-design.md
scripts/: README.md  bump-version.mjs  gen-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mascot.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_keys.rs  claude_cli.rs  file_scan.rs  lib.rs  main.rs  markdown.rs  power.rs  shell_export.rs  state.rs  terminal.rs  types.rs  vscode.rs  workdir.rs
src-tauri/src/bot/: command.rs  gitea.rs  mod.rs  runner.rs  state_store.rs
src-tauri/src/control/: client.rs  mod.rs  protocol.rs
src-tauri/src/file_index/: es_runner.rs  gitignore_filter.rs  mod.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/ipc/commands/: bot.rs  media.rs  misc.rs  persistence.rs  session.rs  settings.rs  tests.rs  usage.rs
src-tauri/src/notification/: hook_server.rs  hook_settings.rs  hub.rs  mod.rs
src-tauri/src/notification/hub/: tests.rs
src-tauri/src/observer/: claude.rs  claude_resume_recorder.rs  codex.rs  event.rs  forwarder.rs  hook_command.rs  mod.rs  server.rs
src-tauri/src/persistence/: claude_resume_store.rs  diary_store.rs  mod.rs  png_store.rs  profile_store.rs  session_time_store.rs  settings_store.rs  work_log_store.rs
src-tauri/src/pixellab/: mod.rs
src-tauri/src/session/: bash_wrapper.rs  broker_pty.rs  env_capture.rs  handoff_broker.rs  handoff_v1.rs  manager.rs  mod.rs  output.rs  output_batcher.rs  pi_extension.rs  poll_reader.rs  pty_factory.rs  shells.rs  wrapper_script.rs  zsh_wrapper.rs
src-tauri/src/session/manager/: real_pty_smoke.rs  tests.rs
src-tauri/src/session_events/: mod.rs  reader.rs  recording_events.rs  store.rs  types.rs
src-tauri/src/sessiond/: client.rs  daemon.rs  mod.rs  protocol.rs
src-tauri/src/sessiond/daemon/: tests.rs
src-tauri/src/summarizer/: claude.rs  codex.rs  mod.rs  windows_job.rs
src-tauri/src/usage/: claude.rs  claude_live.rs  codex.rs  mod.rs
src-tauri/src/workdir/: commands.rs  diff.rs  git_runner.rs  listing.rs  mod.rs  model.rs  status.rs
src-tauri/tests/: contract_fixtures.rs  observer_forwarder.rs
src/renderer/: App.tsx  bootstrap.ts  main.tsx  quitGuard.ts  vite-env.d.ts
src/renderer/__tests__/: App.test.tsx  bootstrap.test.ts  quitGuard.test.ts
src/renderer/about/: AboutDialog.tsx
src/renderer/agent/: ConfirmBotStartDialog.tsx  ConfirmClockOutDialog.tsx  ConfirmDeleteDialog.tsx  ConfirmQuitDialog.tsx  ConfirmRestartDialog.tsx  ConfirmResumeDialog.tsx  ConfirmTerminateDialog.tsx  clockOut.ts  deleteAgent.ts  restartAgentSession.ts  resumeAgentSession.ts  terminateSession.ts
src/renderer/analytics/: AnalyticsDialog.tsx  DailyBarChart.tsx  aggregate.ts  analytics.css  colors.ts
src/renderer/desk/: DeskAssignMenu.tsx
src/renderer/diary/: DiaryDialog.tsx  diary.css  diaryAutoWriter.ts  diaryFlusher.ts  diaryGenerator.ts  diaryStore.ts  quitDiaryFlush.ts  workLog.ts  workLogPersister.ts
src/renderer/ipc/: mascotBridge.ts  osNotify.ts  sessionBridge.ts  sessionOpts.ts  subagentCounts.ts  tauriApi.ts  windowFocus.ts
src/renderer/labels/: TaskLabelLayer.tsx  labelText.ts  labels.css  summarizer.ts
src/renderer/layout/: BottomBar.tsx  TopBar.tsx  UIChrome.tsx  layout.css
src/renderer/markdown/: MarkdownEditorOverlay.tsx  MarkdownPalette.tsx  fuzzy.ts  markdown.css  markdownStore.ts
src/renderer/mascot/: MascotApp.tsx  drag.ts  main.tsx  mascot.css  position.ts  protocol.ts  sheet.ts
src/renderer/notification/: NotificationTicker.tsx  dedupe.ts  ticker.css
src/renderer/office/: OfficeCanvas.tsx  OfficeScene.ts  bus.ts  types.ts  useOfficeScene.ts
src/renderer/portrait/: AgentHoverCard.tsx  PortraitEditor.tsx  cropMath.ts  portrait.css  portraitCache.ts  promptBuilder.ts  retroFilter.ts
src/renderer/power/: keepAwake.ts
src/renderer/profile/: ProfileDialog.tsx  generate.ts  wordlists.ts
src/renderer/settings/: FirstRunDialog.tsx  SettingsDialog.tsx  SettingsForm.tsx
src/renderer/shared/: createListingCache.ts  relativeTime.ts
src/renderer/sound/: backend.ts  packs.ts  soundManager.ts  synth.ts  typing.ts
src/renderer/sprite/: SpriteEditor.tsx  spriteCache.ts  spriteNormalize.ts
src/renderer/store/: appStore.ts  persist.ts  selectors.ts  types.ts
src/renderer/styles/: pixel.css  tokens.css
src/renderer/terminal/: AgentTabStrip.tsx  BotOverlay.tsx  TerminalHost.tsx  TerminalOverlay.tsx  TerminalRegistry.ts  TerminalSummaryBar.tsx  botGuard.ts  botStatusText.ts  terminal.css  terminalViewMode.ts  theme.ts
src/renderer/theme/: applyTheme.ts  themes.ts
src/renderer/timeline/: SessionTimePanel.tsx  agentStats.ts  format.ts  timeline.css  todayTotal.ts  turnReducer.ts  useAgentStats.ts
src/renderer/ui/: ContextMenu.tsx  contextMenu.css
src/renderer/usage/: UsageDialog.tsx  UsageWidget.tsx  usage.css  usageView.ts
src/renderer/workdir/: DiffView.tsx  WorkdirDetailPane.tsx  WorkdirPalette.tsx  WorkdirRepoLogPane.tsx  status.ts  workdir.css  workdirStore.ts
src/shared/: ipc.ts  types.ts
src/shared/__tests__/: contract-fixtures.test.ts  contract.test.ts
(+149 files in other folders)
