[package]
name = "agent-office"
version = "0.4.3"
description = "Agent Office"
authors = ["bugcaptor"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_office_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
tauri = { version = "2", features = [] } # Channel/이벤트/경로 API 포함
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "sync",
    "process",
    "io-util",
] }
axum = "0.7" # latest stable. hook HTTP 서버
portable-pty = "0.8" # latest stable. wezterm PTY
parking_lot = "0.12" # 세션 계층 뮤텍스 — poisoning 없음(패닉 1회가 세션 관리를 앱 재시작까지 벽돌로 만드는 케스케이드 차단)
uuid = { version = "1", features = ["v4"] } # sessionId/notification id
sha1_smol = "1" # dedupKey(순수 Rust, 추가 트랜지티브 의존 없음)
base64 = "0.22" # 초상 PNG base64 IPC 왕복 디코드/인코드
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] } # PixelLab API 호출
tauri-plugin-dialog = "2" # 프로필 시작 폴더의 네이티브 폴더 선택 다이얼로그 (Rust 측에서만 호출 — capability 불필요)

# 세션 핸드오프(unix 전용, docs/session-handoff-design.md): poll 기반 인터럽트
# 가능 리더, sessiond와의 UDS+SCM_RIGHTS(fd 전달), TIOCSWINSZ/killpg.
# portable-pty 0.8이 이미 nix 0.25를 unix 구현에 쓰므로 같은 버전을 직접
# 의존에 명시해 락파일 상의 nix 인스턴스를 하나로 유지한다.
[target.'cfg(unix)'.dependencies]
nix = "0.25"
libc = "0.2" # TIOCSWINSZ ioctl(winsize) — portable-pty의 unix.rs와 동일한 저수준 호출

[dev-dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
] }
